# rust_cxx_autoware_auto_msgs_cov

./: .gitignore  CMakeLists.txt  package.xml
include/rust_cxx_autoware_auto_msgs_cov/: autoware_auto_msgs.hpp  builtin_interfaces.hpp  common.hpp  geometry_msgs.hpp  std_msgs.hpp
src/: autoware_auto_msgs.cpp  builtin_interfaces.cpp  common.cpp  geometry_msgs.cpp  std_msgs.cpp
