<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rust_cxx_autoware_auto_msgs_cov</name>
  <version>0.0.0</version>
  <description>convert between Rust libcxx types and ros msgs types</description>
  <maintainer email="luxiang.zhou@autocore.ai">Zhou LuXiang</maintainer>
  <maintainer email="mintao.shen@autocore.ai">Shen MinTao</maintainer>
  <license>Apache v2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rust_cxx_autoware_auto_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
